# nanoargs

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml
examples/: builder_api.rs  completions.rs  env_fallback.rs  error_handling.rs  extract.rs  flags.rs  full_demo.rs  groups_and_conflicts.rs  help_text.rs  options.rs  positionals.rs  short_flags.rs  subcommands.rs  value_validation.rs  version_flag.rs
src/: builders.rs  completions.rs  free.rs  help.rs  lib.rs  macros.rs  parser.rs  result.rs  tests.rs  types.rs  validators.rs
tests/: prop_alignment.proptest-regressions  prop_alignment.rs  prop_api_inversion.rs  prop_argument_groups.rs  prop_bugfix.rs  prop_colored_help.rs  prop_completions.rs  prop_convenience_validators.rs  prop_core.proptest-regressions  prop_core.rs  prop_env_var.rs  prop_extract_macro.proptest-regressions  prop_extract_macro.rs  prop_flag_builder.proptest-regressions  prop_flag_builder.rs  prop_multi_value.rs  prop_named_builder.rs  prop_option_builder.rs  prop_positional_default_multi.rs  prop_short_flags.rs  prop_subcommands.rs  prop_typed_helpers.rs  prop_utf8_safety.rs  prop_value_validation.rs  prop_version.rs
tests/common/: mod.rs
